perses-results/1/jdk-bugs-removereplace/iter_8/PersesTempRoot_Main.java_run2.sh_20250814_132435_04/000000/compile_err.txt
./Main.java:222: error: type argument Function1<? extends Byte,? extends Byte> is not within bounds of type-variable A
    super(new Boggling<Quested<Double, Byte, Function1<Byte, Byte>>, String, String>(new Quested<Double, Byte, Function1<Byte, Byte>>((Byte corpus) -> { Function2<Wrap<? extends Byte, Quested<Byte, Byte, Function1<? extends Byte, ? extends Byte>>>, N, Smartens<K, K>> antivirus = (sprite, plotted) -> { Smartens<K, K> denounce = new Smartens<K, K>(); final Cordoning<Boolean, N> linden = (Cordoning<Boolean, N>) null; Long analogues = (long)12; linden.doritos = (Long[]) new Object[]{analogues, (long)63, (long)51}; return denounce; }; N concern = (N) null; Byte fields = antivirus.apply(null, concern).signaling(null); Function1<String, String> grandiose = (String tube) -> { String cactuses = "herod"; final Function0<Character> formal = () -> { Character route = 'Q'; return route; }; ((Dooms<Float, String>) null).igor = formal; return cactuses; }; new Quested<Number, String, Function1<String, String>>(grandiose).incloses = ((Culled<Number, String>) null).ensconces; return fields; }), true), 'B');
                                                                                                                                                                                                                     ^
  where A,W are type-variables:
    A extends Function1<W,? extends W> declared in class Quested
    W extends Object declared in class Quested
error: type argument Function1<? extends Byte,? extends Byte> is not within bounds of type-variable A
  where A,W are type-variables:
    A extends Function1<W,? extends W> declared in class Quested
    W extends Object declared in class Quested
2 errors
